<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/ignoreMe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"/>

    <ImageView
        android:id="@+id/displayImageView"
        android:layout_width="139dp"
        android:layout_height="138dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toStartOf="@+id/rightButton"
        app:layout_constraintStart_toEndOf="@+id/leftButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/displayImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/displayImageView"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_24dp" />

    <ImageButton
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/displayImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/displayImageView"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_24dp" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/timestampDefault"
        app:layout_constraintEnd_toEndOf="@+id/displayImageView"
        app:layout_constraintStart_toStartOf="@+id/displayImageView"
        app:layout_constraintTop_toBottomOf="@+id/displayImageView" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/locationDefault"
        app:layout_constraintEnd_toEndOf="@+id/timestamp"
        app:layout_constraintStart_toStartOf="@+id/timestamp"
        app:layout_constraintTop_toBottomOf="@+id/timestamp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/captionInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:focusableInTouchMode="true"
        android:hint="@string/captionHint"
        app:layout_constraintEnd_toStartOf="@+id/updateCaptionButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/updateCaptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/updateCaptionButtonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/captionInputLayout" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/searchButtonLabel"
        app:layout_constraintStart_toStartOf="@+id/captionInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/captionInputLayout" />

    <Button
        android:id="@+id/snapButton"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/snapButtonLabel"
        app:layout_constraintEnd_toEndOf="@+id/updateCaptionButton"
        app:layout_constraintTop_toTopOf="@+id/searchButton" />

</android.support.constraint.ConstraintLayout>