...
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:hint="@string/captionHint"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toTopOf="@id/locationListView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>
...
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/applyFiltersButton">
    </ListView>

    <Button
        android:id="@+id/applyFiltersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
